# challonge-discord-thread-creator

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit-ci.json  bandit-report.json  bandit.json  config.example.yaml  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  CREDENTIALS.md  DEVELOPMENT.md  INSTALLATION.md  README.md  TEMPLATES.md  TROUBLESHOOTING.md  USAGE.md
src/tourney_threads/: app.py  cli.py
src/tourney_threads/api/: __init__.py  challonge.py  models.py  oauth.py
src/tourney_threads/config/: __init__.py  constants.py  loader.py
src/tourney_threads/discord_client/: __init__.py  formatters.py  thread_manager.py
src/tourney_threads/utils/: __init__.py  names.py  rounds.py
tests/test_tourney_threads/: test_app.py  test_cli.py
tests/test_tourney_threads/api/: test_challonge.py  test_models.py  test_oauth.py
tests/test_tourney_threads/config/: test_loader.py
tests/test_tourney_threads/discord_client/: test_formatters.py  test_thread_manager.py
tests/test_tourney_threads/e2e/: __init__.py  test_cli_e2e.py
tests/test_tourney_threads/integration/: __init__.py  test_api_integration.py  test_discord_integration.py
tests/test_tourney_threads/utils/: test_names.py  test_rounds.py
